--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/baseballicon.ico">
+  <meta name="description" content="Welcome to my resume where you will find my job experiences, educational achievements, and portfoli0.">
+  <meta name="author" content="862325386">
 
-  <title>John Doe - Business Administration</title>
+  <title>Alphonzo Mancinas - Media and Cultural Studies</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Alphonzo Mancinas</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/alphonzomancinas.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Alphonzo Mancinas
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Media and Cultural Studies📚</div>
+        <p class="lead mb-4">From a young age, I was taught to be respectful to others and work hard at whatever I do. Ever since I was 4 years old, my parents gave me the opportunity to play baseball and fulfill my dream of one day becoming a Major League Baseball player. Although I know the possibility of that dream coming true isn't too high, I will forever be gratefull for all that I have learned no matter what. I grew up in Redlands,CA with my sister and two parents where I attended Crafton elementary, Clement middle, and Redlands East Valley high school.From middle school to high school, I was enrolled in many honors/AP courses where I excelled to create as many scholar opportunities as possible. Following high school, I attended Riverside City College to continue my education and baseball career with hopes to attend a D1 after. Due to Covid, I was shortned two years of playing but still managed to obtain an A.A. in Social Sciences and Kinesiology.       <br><br>
 
-        Enter bio here<br><br>
+        In the midst of Covid, I had some free time on my hands that allowed me to work at my first real job. I applied and got accepted into Trader Joe's in June of 2020 where I started off working 40 hours a week. Although it was a big change for me, I felt like I was very well prepared due to all my experience playing/working in the baseball world. I learned time management, responsibility, and committment at a young age which I transferred directly into the work force and it helped me tremendously to be a good employee and co-worker.<br><br>
 
-        Enter bio here
+        Now that I am at UCR doing school and sports full time, I am unable to work at Trader Joe's. For extra money, I teach younger kids the basics of hitting through some things I have learned throughout the years. Even though I am not working for a company, I still work hard and stay committed to getting better at something every day.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://instagram.com/phonzii_mancinas27">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/amancinas">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/phonzi_mancinas">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:amanc021@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,47 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
+            <h3 class="mb-0">Hitting Instructor</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Taught kids hitting fundamentals<br> 
+              • Developed responsibility working with set schedules<br>
+              • Working with clientele<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">January 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.traderjoes.com/home">Trader Joe's</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Ringing up customers <br>
+              • Stocking items<br>
+              • Being a great customer service representative <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">July 2020 - March 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Little League Umpire</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.rby.org">Redlands Baseball for Youth</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • Umpired games for kids ages 4-10<br>
+            • Attended meetings to learn basics<br>
+            • Worked over 50 games<br>
           </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+        </div>
+        <div class="resume-date text-md-right">
+            <span class="text-primary">February 2015 - May 2017</span>
           </div>
         </div>
 
@@ -151,34 +150,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Riverside City College</h3>
+            <div class="subheading mb-3">Associates in Social Sciences</div>
+            <div>A.A. in Communication</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2019 - June 2021</span>
           </div>
         </div>
 
@@ -191,7 +168,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_1436.jpg" width="500px">
+            <img src="img/IMG_1247 2.jpeg" width="500px"><br>
+            <img src="img/IMG_7230.jpeg" width="500px">
+            <img src="img/IMG_1437.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Alphonzo Mancinas</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
